Removed newer switch versions